--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h1>
         Build The Community Your Fans Will Love
     </h1>
-    <p>Huddle re-imagines the way we build communities. You have <br> a voice, but so does 
-    your audience. Create connections with your <br> users as you engage in genuine discussion. </p>
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does 
+    your audience. Create connections with your users as you engage in genuine discussion. </p>
 
     <button class="btn btn-start">Get Started For Free</button>
 
