--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="row">
     <div>
       <img class="logo_white" src="images/logo_white.svg" alt="">
-      <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Mauris nulla quam, hendrerit <br> lacinia 
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
           vestibulum a, ultrices quis sem.</p>
       <p><img class="phone-icon" src="images/icon-phone.svg" alt="phone">Phone: +1-543-123-4567</p>
       <p><img class="email-icon" src="images/icon-email.svg" alt="messages">example@huddle.com</p>
@@ -114,8 +114,8 @@
     </div>
     <div>
       <h3>Newsletter</h3>
-      <p>To recieve tips on how to grow your community, <br> sign up to our weekly newsletter. We’ll never 
-        send <br> you spam or pass on your email address</p>
+      <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+        send you spam or pass on your email address</p>
 
         <form action="mailto:aguayoeric17@gmail.com">
           <input type="text">
