--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <div class="container">
   <div class="row">
     <div>
-      <img src="images/icon-communities.svg" alt="communities">
+      <img class="icon icon-community src="images/icon-communities.svg" alt="communities">
       <h1>1.4k+</h1>
       <p>Communities Formed</p>
     </div>
     <div>
-    <img src="images/icon-messages.svg" alt="messages">
+    <img class="icon icon-messages" src="images/icon-messages.svg" alt="messages">
     <h1>2.7m+</h1>
       <p>Messages Sent</p>
     </div>
