--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="container">
   <div class="row">
     <div>
-      <img class="icon icon-community src="images/icon-communities.svg" alt="communities">
+      <img class="icon icon-community" src="images/icon-communities.svg" alt="communities">
       <h1>1.4k+</h1>
       <p>Communities Formed</p>
     </div>
