--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<main>
+
   <div class="container">
   <div class="flex">
     <!-- growth -->
@@ -98,7 +98,7 @@
     </div>
   </div>
 </div>
-</main>
+
 <!-- footer -->
 <footer>
   <div class="row">
@@ -118,7 +118,7 @@
         send you spam or pass on your email address</p>
 
         <form action="mailto:aguayoeric17@gmail.com">
-          <input type="text">
+          <input type="text" placeholder="Email Address">
           <button class="btn btn-footer">Subscribe</button>
         </form>
     </div>
